--- a/base/build.gradle
+++ b/base/build.gradle
@@ -2,14 +2,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 android {
-    compileSdkVersion rootProject.compileSdkVersion
-    buildToolsVersion '30.0.0'
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion '31.0.0 rc5'
 
     defaultConfig {
-        minSdkVersion rootProject.minSdkVersion
-        targetSdkVersion rootProject.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [AROUTER_MODULE_NAME: project.getName()]
@@ -34,22 +32,22 @@ android {
 }
 
 dependencies {
-    api "androidx.appcompat:appcompat:$rootProject.androidXVersion"
-    api "com.google.code.gson:gson:$rootProject.gson"
+    api "androidx.appcompat:appcompat:$rootProject.ext.androidXVersion"
+    api "com.google.code.gson:gson:$rootProject.ext.gson"
     //Lottie是Airbnb开源的一个支持 Android、iOS 以及 ReactNative，利用json文件的方式快速实现动画效果的库
     api 'com.airbnb.android:lottie:3.4.1'
 //    api "androidx.recyclerview:recyclerview:$rootProject.androidXVersion"
 //    api 'com.kingja.loadsir:loadsir:1.3.6'
-    api "com.google.android.material:material:$rootProject.androidXVersion"
+    api "com.google.android.material:material:$rootProject.ext.androidXVersion"
     //引入rxjava
-    implementation "io.reactivex.rxjava3:rxjava:$rootProject.rxjava"
-    implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofit"
-    implementation "com.tencent:mmkv-static:$rootProject.mmkv"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
+    implementation "io.reactivex.rxjava3:rxjava:$rootProject.ext.rxjava"
+    implementation "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofit"
+    implementation "com.tencent:mmkv-static:$rootProject.ext.mmkv"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.ext.coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.ext.coroutines"
 
 }
 
 
-apply plugin: 'maven'
+/*apply plugin: 'maven'*/
 
