--- a/network/build.gradle
+++ b/network/build.gradle
@@ -5,10 +5,8 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -28,12 +26,12 @@ android {
 }
 
 dependencies {
-    implementation "com.squareup.retrofit2:retrofit:$retrofit"
-    api "com.squareup.retrofit2:converter-gson:$retrofit"
-    implementation "com.squareup.okhttp3:logging-interceptor:$loggingInterceptor"
+    implementation "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofit"
+    api "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofit"
+    implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.loggingInterceptor"
 //    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     //    Retrofit的CallAdaper还只支持RxJava2 ，而不支持Rxjava3。
-    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:$retrofitAdapter"
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:$rootProject.ext.retrofitAdapter"
     //v1.5
     implementation "io.reactivex.rxjava3:rxandroid:$rxandroid"
     // Because RxAndroid releases are few and far between, it is recommended you also
