--- a/webview/build.gradle
+++ b/webview/build.gradle
@@ -1,13 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion (rootProject.compileSdkVersion)
+    compileSdkVersion (rootProject.ext.compileSdkVersion)
     buildToolsVersion '30.0.0'
     defaultConfig {
-        minSdkVersion rootProject.minSdkVersion
-        targetSdkVersion rootProject.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
     }
     compileOptions{
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -22,7 +20,7 @@ android {
 }
 
 dependencies {
-    implementation "androidx.appcompat:appcompat:$rootProject.androidXVersion"
+    implementation "androidx.appcompat:appcompat:$rootProject.ext.androidXVersion"
     api project(':network')
     api 'com.kingja.loadsir:loadsir:1.3.6'
 
